--- a/src/app/Modules/catalog/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/catalog/catalog-items/catalog-items.component.html
@@ -4,29 +4,25 @@
     *ngFor="
       let item of itemsData
         | async
+        | filter: categoriesFilterName
         | paginate: { itemsPerPage: pageSize, currentPage: p }
     "
   >
-    <div
-      *ngIf="
-        !categoriesFilterName || categoriesFilterName == item.category.name
-      "
-      class="container__item"
-      [routerLink]="['/catalog', item.name]"
-      [queryParams]="{
-        categoryName: item.category.name,
-        id: item.id,
-        price: item.priceDto.price,
-        photo: item.photo,
-        shortDescription: item.shortDescription,
-        description: item.description
-      }"
-    >
-      <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
-      <h5 class="container__title">{{ item.name }}</h5>
-      <h6 class="opacity">{{ item.category.name }}</h6>
-      <p class="container__paragraph">€{{ item.priceDto.price }} EUR</p>
-      <button class="button">
+    <div class="container__item">
+      <div
+        class="container-details"
+        (click)="addToProducts(item)"
+        [routerLink]="['/catalog', item.name]"
+        [queryParams]="{
+          categoryName: item.category.name
+        }"
+      >
+        <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
+        <h5 class="container__title">{{ item.name }}</h5>
+        <h6 class="opacity">{{ item.category.name }}</h6>
+        <p class="container__paragraph">€{{ item.priceDto.price }} EUR</p>
+      </div>
+      <button class="button" (click)="addToCart(item)">
         <img
           id="imageBaggy"
           src="../../../../assets/img-home/button-bag.png"
@@ -36,7 +32,13 @@
       </button>
     </div>
   </div>
+</div>
+<div
+  class="container-pagination"
+  *ngIf="itemsLength | filter: categoriesFilterName as data"
+>
   <pagination-controls
+    *ngIf="data.length != 0"
     class="my-pag"
     (pageChange)="p = $event"
     [directionLinks]="false"
