--- a/src/app/Modules/home/home.component.scss
+++ b/src/app/Modules/home/home.component.scss
@@ -43,6 +43,9 @@
         }
     }
 }
+.container-item {
+    margin-left: 12%;
+}
 .color {
     font-weight: bold;
     font-size: 3.6rem;
@@ -52,10 +55,10 @@
     -webkit-text-fill-color: transparent;
     margin-bottom: 3.6rem;
 }
-.swiper-container{
-    margin:0 11% 0 11%;
+.swiper-container {
+    margin: 0 11% 0 11%;
 }
-.container-banners{
+.container-banners {
     margin-left: 12%;
 }
 @media (max-width: 500px) {
