--- a/src/app/Modules/home/items/items.component.scss
+++ b/src/app/Modules/home/items/items.component.scss
@@ -2,12 +2,12 @@
 @import "../../../styles/_mixins.scss";
 
 .container__items {
-    margin: 0 0 10rem 12%;
+    margin: 0 0 10rem 0;
     flex-wrap: wrap;
+    justify-content: flex-start;
 }
 .container__wrap {
-    flex: 0 0 22%;
-    margin-right: 2rem;
+    flex: 0 0 23%;
     margin-bottom: 3rem;
 }
 .container__item {
@@ -32,6 +32,7 @@
         margin: 0 2.4rem;
         position: absolute;
         top: 30.5rem;
+        width: 20rem;
     }
     .button {
         opacity: 0;
