--- a/src/app/Modules/myorders/myorders.component.html
+++ b/src/app/Modules/myorders/myorders.component.html
@@ -1,1 +1,58 @@
-<p>myorders works!</p>
+<div class="wrapper-myorders">
+  <div class="container-myorders">
+    <div class="container-myorders__line"></div>
+    <div class="container-myorders__path flex justify-content-start">
+      <div class="container__home">
+        <a class="container__link" routerLink="/">Home</a>
+      </div>
+      <div class="container__angle">
+        <img src="../../../assets/img-aboutus/Angle.png" alt="angle" />
+      </div>
+      <div class="container__myorders">My orders</div>
+    </div>
+    <div class="container-myorders__cart-title">My orders</div>
+    <p-accordion
+      expandIcon="pi pi-fw pi-chevron-down"
+      collapseIcon="pi pi-fw pi-chevron-up"
+    >
+      <p-accordionTab>
+        <ng-template pTemplate="header"
+          ><div class="container-order">
+            <div class="container-order__dot"></div>
+            <div class="container-order__number-date">
+              <p class="container-order__number">Order #879455565123</p>
+              <p class="container-order__date">Julu 27, 2021 15:45</p>
+            </div>
+            <div class="container-order__adress">Kolas str, 15, ap. 43</div>
+            <div class="container-order__total-price">€96.15 EUR</div>
+          </div></ng-template
+        >
+        <div class="container-order__title">Order Details</div>
+        <div class="container-order__cart-item">
+          <img
+            id="miniItemImage"
+            src="../../../assets/img-home/image 1.png"
+            alt="itemImage"
+          />
+          <div class="container-order__cart-item-container">
+            <div class="container-order__mobile-container">
+              <div class="container-order__cart-item-description">
+                <p class="item-name">Bouquet 117 (21 gerberas)</p>
+                <p class="item-category">Fresh flowers</p>
+              </div>
+              <div class="container-order__cart-item-price-container">
+                <div class="container-order__cart-item-price-one">
+                  €62.17 EUR
+                </div>
+                <div class="container-order__cart-item-x">x</div>
+                <div class="container-order__cart-item-number">1</div>
+              </div>
+            </div>
+            <div class="container-order__cart-item-price-total">€62.17 EUR</div>
+          </div>
+        </div>
+        <div class="container-order__line"></div>
+      </p-accordionTab>
+    </p-accordion>
+  </div>
+</div>
