--- a/src/app/Modules/filter/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.html
@@ -5,6 +5,7 @@
       let item of itemsData
         | async
         | filter: categoriesFilterName
+        | search: searchInput
         | paginate: { itemsPerPage: pageSize, currentPage: p }
     "
   >
@@ -20,9 +21,18 @@
         <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
         <h5 class="container__title">{{ item.name }}</h5>
         <h6 class="opacity">{{ item.category.name }}</h6>
-        <p class="container__paragraph">€{{ item.priceDto.price }} EUR</p>
+        <p class="container__paragraph" *ngIf="!cartItem.includes(item)">
+          €{{ item.priceDto.price }} EUR
+        </p>
       </div>
-      <button class="button" (click)="addToCart(item)">
+      <p class="container__incart" *ngIf="cartItem.includes(item)">
+        In the cart
+      </p>
+      <button
+        class="button"
+        *ngIf="!cartItem.includes(item)"
+        (click)="addToCart(item)"
+      >
         <img
           id="imageBaggy"
           src="../../../../assets/img-home/button-bag.png"
@@ -35,7 +45,9 @@
 </div>
 <div
   class="container-pagination"
-  *ngIf="itemsLength | filter: categoriesFilterName as data"
+  *ngIf="
+    itemsLength | filter: categoriesFilterName | search: searchInput as data
+  "
 >
   <pagination-controls
     *ngIf="data.length != 0"
