--- a/src/app/Modules/myorders/myorders.component.html
+++ b/src/app/Modules/myorders/myorders.component.html
@@ -19,11 +19,13 @@
         <ng-template pTemplate="header"
           ><div class="container-order">
             <div class="container-order__dot"></div>
-            <div class="container-order__number-date">
-              <p class="container-order__number">Order #879455565123</p>
-              <p class="container-order__date">Julu 27, 2021 15:45</p>
+            <div class="container-order__mobile-cart">
+              <div class="container-order__number-date">
+                <p class="container-order__number">Order #879455565123</p>
+                <p class="container-order__date">Julu 27, 2021 15:45</p>
+              </div>
+              <div class="container-order__adress">Kolas str, 15, ap. 43</div>
             </div>
-            <div class="container-order__adress">Kolas str, 15, ap. 43</div>
             <div class="container-order__total-price">€96.15 EUR</div>
           </div></ng-template
         >
@@ -52,6 +54,33 @@
           </div>
         </div>
         <div class="container-order__line"></div>
+        <div class="container-order__contact-information">
+          <div class="container-order__contact-title">Contact person</div>
+          <div class="container-order__contact-name">Ivanov Konstantin</div>
+          <div class="container-order__contact-email">
+            konstantin.ivanov@mail.ru
+          </div>
+          <div class="container-order__contact-phone">+375 29 122-45-78</div>
+          <div class="container-order__contact-additional-info-title">
+            Additional information
+          </div>
+          <p class="container-order__contact-additional-info-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. At nullam
+            pulvinar aliquet est. Pretium sit volutpat sem amet rhoncus.
+          </p>
+          <div class="container-order__contact-message-title">
+            Congratulation message
+          </div>
+          <p class="container-order__contact-message-text">
+            At nullam pulvinar aliquet est. Pretium sit volutpat sem amet
+            rhoncus.
+          </p>
+        </div>
+        <div class="container-order__line"></div>
+        <div class="container-order__payment-mathod-title">Payment method</div>
+        <div class="container-order__payment-mathod-text">
+          In cash to the courier
+        </div>
       </p-accordionTab>
     </p-accordion>
   </div>
