--- a/src/app/Modules/filter/catalog-items/catalog-items.component.scss
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.scss
@@ -273,6 +273,21 @@
     .my-pag::ng-deep .ngx-pagination {
         margin-left: $pt_2rem;
     }
+    .container__incart {
+        @include font(Montserrat, normal, 600, 1.5rem, 110%, 0.05em, $color_green);
+        background: url("../../../../assets/img-home/In\ cart.png") 8rem 2.2rem no-repeat;
+        text-transform: uppercase;
+        position: static;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        @include wihi(29.5rem, 5.7rem);
+        background-color: $color_white;
+        border-radius: 10px;
+        border: 1px solid $color_green;
+        margin: 0 auto;
+    }
 }
 @media (max-width: 840px) {
     .container__items {
