--- a/src/app/Modules/filter/filter.component.scss
+++ b/src/app/Modules/filter/filter.component.scss
@@ -297,11 +297,77 @@
     .dropdown-button {
         display: none;
     }
+    .mobile-container {
+        &__filter {
+            position: fixed;
+            top: 0;
+            left: 0rem;
+            right: 0;
+            bottom: 0;
+            z-index: 999999;
+            padding-left: 2rem;
+            padding-right: 2rem;
+            background-color: #fff;
+            height: 100%;
+            overflow: auto;
+        }
+        &__filter-header {
+            margin-top: 1.9rem;
+            margin-right: 2rem;
+            margin-bottom: 1.9rem;
+            display: flex;
+            justify-content: space-between;
+        }
+        &__filter-title {
+            @include font(Montserrat, normal, 700, 2.2rem, 120%, 0em, $color_darkgrey);
+        }
+        &__filter-line {
+            background: $color_darkgrey;
+            opacity: 0.2;
+            height: 1px;
+            margin-bottom: 4rem;
+        }
+    }
+    #closeImage {
+        cursor: pointer;
+        @include wihi(2.4rem, 2.4rem);
+    }
+    #closeImage:hover {
+        padding-top: 0.1rem;
+        padding-left: 0.1rem;
+    }
+    #closeImage:active {
+        padding-top: 0.2rem;
+        padding-left: 0.2rem;
+    }
+    .p-float-label {
+        width: 15.8rem;
+        margin-right: 2rem;
+    }
+    :host {
+        ::ng-deep .p-slider.p-slider-horizontal {
+            width: 33.5rem;
+        }
+        ::ng-deep #currency-min {
+            width: 15.8rem;
+        }
+        ::ng-deep #currency-max {
+            width: 15.8rem;
+        }
+    }
 }
 @media (max-width: 600px) {
     :host {
         ::ng-deep .p-button {
+            width: 33.5rem;
+            display: inline;
+        }
+        ::ng-deep .p-button.p-button-success.p-button-outlined {
             width: 15.8rem;
+            padding: 2rem 3.6rem;
+        }
+        ::ng-deep .p-button.p-button-success.p-button-outlined.container-catalog__filter-buttons-button2 {
+            width: 33.5rem;
             padding: 2rem 3.6rem;
         }
     }
