--- a/src/app/Modules/cart-order/cart-order.component.html
+++ b/src/app/Modules/cart-order/cart-order.component.html
@@ -23,7 +23,7 @@
           name="group1"
           [(ngModel)]="checked"
           [inputId]="item.id"
-          [value]="item.name"
+          [value]="item"
         ></p-checkbox>
       </div>
       <img
@@ -66,7 +66,9 @@
       class="container-cartorder__cart-total"
       *ngIf="this.product.length != 0"
     >
-      <button class="button-delete">Delete selected</button>
+      <button class="button-delete" (click)="deleteSelected()">
+        Delete selected
+      </button>
       <div class="container-cartorder__cart-total-container">
         <div class="container-cartorder__cart-total-total-price-text">
           Total price —
