--- a/src/app/Modules/filter/filter.component.html
+++ b/src/app/Modules/filter/filter.component.html
@@ -130,6 +130,7 @@
           type="button"
           label="Sorting"
           class="p-button-outlined p-button-success container-catalog__mobile-buttons-sorting"
+          (click)="sortingDisplay()"
         ></button>
       </div>
     </div>
@@ -137,7 +138,7 @@
       <app-catalog-items></app-catalog-items>
     </div>
   </div>
-  <div class="mobile-container__filter" *ngIf="isShow">
+  <div class="mobile-container__filter" *ngIf="isFilterShow">
     <div class="mobile-container__filter-header">
       <div class="mobile-container__filter-title">Filter</div>
       <img
@@ -236,6 +237,38 @@
         label="Clear filter"
         class="p-button-outlined p-button-success container-catalog__filter-buttons-button2"
       ></button>
+    </div>
+  </div>
+  <div class="mobile-container__filter" *ngIf="isSortingShow">
+    <div class="mobile-container__filter-header">
+      <div class="mobile-container__filter-title">Sorting</div>
+      <img
+        (click)="sortingDisplay()"
+        id="closeImage"
+        src="../../../assets/img-home/x.png"
+        alt="x"
+      />
+    </div>
+    <div class="mobile-container__sorting-line"></div>
+    <div class="container-catalog__filter-category-title">Sort by</div>
+    <div *ngFor="let category of categories" class="field-checkbox">
+      <p-radioButton
+        [inputId]="category.key"
+        name="category"
+        [value]="category"
+        [(ngModel)]="selectedCategory"
+        [label]="category.name"
+      ></p-radioButton>
+    </div>
+    <div class="container-catalog__sorting-button">
+      <p-button
+        class="container-catalog__filter-buttons-button1"
+        label="Apply sorting"
+        icon="pi pi-check"
+        id="butbut"
+        (click)="sortingCategoriesButton()"
+      >
+      </p-button>
     </div>
   </div>
 </div>
