--- a/src/app/Modules/filter/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.html
@@ -13,36 +13,38 @@
     "
   >
     <div class="container__item">
-      <div
-        class="container-details"
-        (click)="addToProducts(item)"
-        [routerLink]="['/catalog', item.name]"
-        [queryParams]="{
-          categoryName: item.category.name
-        }"
-      >
-        <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
-        <h5 class="container__title">{{ item.name }}</h5>
-        <h6 class="opacity">{{ item.category.name }}</h6>
-        <p class="container__paragraph" *ngIf="!cartItem.includes(item)">
-          €{{ item.priceDto.price }} EUR
+      <div class="container__item-inner">
+        <div
+          class="container-details"
+          (click)="addToProducts(item)"
+          [routerLink]="['/catalog', item.name]"
+          [queryParams]="{
+            categoryName: item.category.name
+          }"
+        >
+          <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
+          <h5 class="container__title">{{ item.name }}</h5>
+          <h6 class="opacity">{{ item.category.name }}</h6>
+          <p class="container__paragraph" *ngIf="!cartItem.includes(item)">
+            €{{ item.priceDto.price }} EUR
+          </p>
+        </div>
+        <p class="container__incart" *ngIf="cartItem.includes(item)">
+          In the cart
         </p>
+        <button
+          class="button"
+          *ngIf="!cartItem.includes(item)"
+          (click)="addToCart(item)"
+        >
+          <img
+            id="imageBaggy"
+            src="../../../../assets/img-home/button-bag.png"
+            alt="baggy"
+          />
+          <p class="button__paragraph">ADD TO CART</p>
+        </button>
       </div>
-      <p class="container__incart" *ngIf="cartItem.includes(item)">
-        In the cart
-      </p>
-      <button
-        class="button"
-        *ngIf="!cartItem.includes(item)"
-        (click)="addToCart(item)"
-      >
-        <img
-          id="imageBaggy"
-          src="../../../../assets/img-home/button-bag.png"
-          alt="baggy"
-        />
-        <p class="button__paragraph">ADD TO CART</p>
-      </button>
     </div>
   </div>
 </div>
