--- a/src/app/Modules/filter/catalog-items/catalog-items.component.scss
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.scss
@@ -3,16 +3,18 @@
 
 .container__items {
     margin: 0;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    min-height: 500px;
 }
 .container__wrap {
-    flex: 0 1 31%;
+    flex: 0 0 31%;
     margin-left: 1.95rem;
     margin-bottom: 3rem;
 }
+
 .container__item {
     @include wihi(25.5rem, 34.4rem);
     border: 1px solid $color_lightgrey;
@@ -45,14 +47,18 @@
     margin: 0.5rem 2.4rem;
     text-align: left;
 }
-.container__item:hover {
-    transition: 0.5s;
-    @include wihi(25.5rem, 42.5rem);
+.container__item-inner {
     position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    height: 100%;
+}
+.container__item:hover {
     z-index: 2;
     background-color: $color_white;
     box-sizing: border-box;
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
     .button {
         transition: 0.5s;
         opacity: 1;
@@ -85,6 +91,13 @@
         }
     }
 }
+.container__item:hover .container__item-inner {
+    @include wihi(25.5rem, 42.5rem);
+    background-color: $color_white;
+    border-radius: 10px;
+    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+    transition: 0.5s;
+}
 .container__incart {
     @include font(Montserrat, normal, 500, 1.4rem, 150%, 0.05em, $color_green);
     background: url("../../../../assets/img-home/In\ cart.png") 0 0.5rem no-repeat;
@@ -95,9 +108,9 @@
     width: 20rem;
 }
 .my-pag {
-    display: block;
-    margin-top: 37rem;
-    margin-left: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 }
 .my-pag::ng-deep .ngx-pagination {
     margin-top: 1rem;
@@ -160,17 +173,8 @@
     .container__wrap {
         flex: 0 0 42%;
     }
-    .my-pag {
-        margin-top: 0rem;
-        margin-left: 28rem;
-    }
 }
-@media (max-width: 1284px) {
-    .my-pag {
-        left: 25rem;
-        top: 0rem;
-    }
-}
+
 @media (max-width: 1270px) {
     .container__items {
         margin-left: 5%;
@@ -181,12 +185,20 @@
     }
 }
 @media (max-width: 1145px) {
-    .my-pag {
-        margin-left: 10rem;
-    }
     .container__items {
         margin: 0 $pt_2rem;
         display: block;
+    }
+    .container__item-inner {
+        position: static;
+        @include wihi(33.5rem, 23.4rem);
+    }
+    .container__item:hover .container__item-inner {
+        @include wihi(33.5rem, 23.4rem);
+        background-color: $color_white;
+        border-radius: 10px;
+        box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.1);
+        transition: 0.5s;
     }
     .container__wrap {
         margin-bottom: 3rem;
@@ -204,6 +216,7 @@
             width: 10.7rem;
             height: 10.7rem;
             margin: 2rem;
+            margin-top: 0;
         }
         .container__title {
             width: 90%;
@@ -241,12 +254,6 @@
         width: 33.5rem;
         height: 23.4rem;
         background-color: $color_white;
-        .image-item {
-            float: left;
-            width: 10.7rem;
-            height: 10.7rem;
-            margin: 2rem;
-        }
         .container__title {
             width: 90%;
             margin-top: 2rem;
