creating get post put delete requests in cartpage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -94,7 +94,7 @@
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <span class="header__quantity">{{ quantityItem }}</span>
+            <span class="header__quantity">{{ this.quantityItem }}</span>
           </a>
         </li>
         <li class="menu-icon icon-user">
