--- a/src/app/Modules/home/items/items.component.scss
+++ b/src/app/Modules/home/items/items.component.scss
@@ -108,7 +108,7 @@
         flex-wrap: wrap;
     }
     .container__wrap {
-        flex: 1 0 30rem;
+        flex: 1 0 40%;
         margin-bottom: 3rem;
     }
 }
