--- a/src/app/Modules/filter/catalog-items/catalog-items.component.html
+++ b/src/app/Modules/filter/catalog-items/catalog-items.component.html
@@ -25,16 +25,16 @@
           <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
           <h5 class="container__title">{{ item.name }}</h5>
           <h6 class="opacity">{{ item.category.name }}</h6>
-          <p class="container__paragraph" *ngIf="!cartItem.includes(item)">
+          <p class="container__paragraph" *ngIf="!id.includes(item.id)">
             €{{ item.priceDto.price }} EUR
           </p>
         </div>
-        <p class="container__incart" *ngIf="cartItem.includes(item)">
+        <p class="container__incart" *ngIf="id.includes(item.id)">
           In the cart
         </p>
         <button
           class="button"
-          *ngIf="!cartItem.includes(item)"
+          *ngIf="!id.includes(item.id)"
           (click)="addToCart(item)"
         >
           <img
