debuging of errors in testing, test coverage-60%

--- a/src/app/Modules/home/items/items.component.html
+++ b/src/app/Modules/home/items/items.component.html
@@ -6,7 +6,8 @@
         (click)="addToProduct(item)"
         [routerLink]="['/catalog', item.name]"
         [queryParams]="{
-          categoryName: item.category.name
+          categoryName: item.category.name,
+          id: item.id
         }"
       >
         <img [src]="getItemImage(item.photo)" alt="img1" class="image-item" />
